# voxtral-app

./: .gitignore  README.md  app.py  main.py  pyproject.toml  voxtral_tts.py
