[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxtral-app"
version = "0.1.0"
description = "Text-to-speech with Voxtral-4B-TTS-2603"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx",
    "soundfile",
    "sounddevice",
]

[project.optional-dependencies]
offline = [
    "vllm>=0.18.0; sys_platform == 'linux'",
    "mistral_common>=1.10.0",
    "torch",
    "numpy",
    "vllm-omni>=0.18.0rc1; sys_platform == 'linux'",
]

[project.scripts]
voxtral-tts = "voxtral_tts:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["voxtral_tts.py"]

[tool.uv]
environments = ["sys_platform == 'linux'", "sys_platform == 'win32'"]
prerelease = "if-necessary-or-explicit"
